--- a/src/components/parent/ScoreCardStarIcons.css
+++ b/src/components/parent/ScoreCardStarIcons.css
@@ -5,7 +5,7 @@
 .star-icon-image{
     display: flex;
     justify-content: space-evenly;
-    padding: 2% 31%;
+    padding: 2% 27%;
 }
 
 .score-card-first-star {
